kubernetes/apps/base/sure/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sure
  namespace: sure
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
  hostnames:
    - sure.${INTERNAL_DOMAIN}
  rules:
    - backendRefs:
        - name: sure
          port: 3000
