kubernetes/apps/base/sure/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-except-namespace
  namespace: sure
spec:
  description: "Allow traffic only to the namespace itself"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sure
  ingress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-cluster
  namespace: sure
spec:
  description: "Allow CloudNativePG pods access"
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: sure-cluster
  ingress:
    # Allow access from other cluster pods
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: sure
            cnpg.io/cluster: sure-cluster
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
            - port: status
              protocol: TCP
    # Allow access from sure web/worker pods
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: sure
            app.kubernetes.io/name: sure
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-egress
  namespace: sure
spec:
  description: "Allow egress to centralized Dragonfly (dragonfly namespace)"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sure
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dragonfly
            app.kubernetes.io/part-of: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sure-web
  namespace: sure
spec:
  description: "Allow traffic to sure web"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sure
      app.kubernetes.io/component: web
  ingress:
    # Envoy to sure
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: http
              protocol: TCP
    # Pangolin to sure
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: pangolin
            app.kubernetes.io/name: pangolin
            app.kubernetes.io/component: newt
      toPorts:
        - ports:
            - port: http
              protocol: TCP
    # Uptime to sure
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: uptime
            app.kubernetes.io/name: uptime
            app.kubernetes.io/instance: uptime
      toPorts:
        - ports:
            - port: http
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: http
              protocol: TCP
  egress:
    - toFQDNs:
        # Yahoo Finance for exchange rates + securities prices
        - matchName: fc.yahoo.com
        - matchName: query1.finance.yahoo.com
        - matchName: query2.finance.yahoo.com
        # Github
        - matchName: api.github.com
        # Enable Banking API for bank account aggregation
        - matchName: api.enablebanking.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # SMTP (maddy) for password resets / email reports
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: maddy
            app.kubernetes.io/name: maddy
            app.kubernetes.io/instance: maddy
      toPorts:
        - ports:
            - port: smtp
              protocol: TCP
    # Sure to envoy (for OIDC provider)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: "10443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: litellm
            app.kubernetes.io/name: litellm
            app.kubernetes.io/instance: litellm
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    # RGW S3 for ActiveStorage (PDFs/statements).
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rook-ceph
            app: rook-ceph-rgw
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sure-worker
  namespace: sure
spec:
  description: "Allow sure worker egress"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sure
      app.kubernetes.io/component: worker
  egress:
    - toFQDNs:
        # Yahoo Finance for background sync jobs
        - matchName: fc.yahoo.com
        - matchName: query1.finance.yahoo.com
        - matchName: query2.finance.yahoo.com
        # Enable Banking API for background sync jobs
        - matchName: api.enablebanking.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # SMTP (maddy) for background email jobs
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: maddy
            app.kubernetes.io/name: maddy
            app.kubernetes.io/instance: maddy
      toPorts:
        - ports:
            - port: smtp
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: litellm
            app.kubernetes.io/name: litellm
            app.kubernetes.io/instance: litellm
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    # RGW S3 for ActiveStorage (PDFs/statements).
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rook-ceph
            app: rook-ceph-rgw
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
